# Singapore-flood-risk

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
floodlib/: __init__.py  common.py  feature_pipeline.py  risk_model.py
scripts/: build_dataset_from_datagov.py  build_processed_features_fast.py  build_rainfall_history.py
tests/: test_feature_pipeline.py  test_risk_model.py
